# stagecoachml

./: .ruff.toml  CITATION.cff  README.md  pyproject.toml
.binder/: postBuild
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: conf.py  index.md  jupyter_lite_config.json  quickstart.md
docs/_static/: .gitkeep
docs/api/: cli.md  pipeline.md  stage.md
docs/examples/: index.md
docs/notebooks/: quickstart_interactive.ipynb
examples/: classification_example.py  regression_example.py
examples/boston_housing/: README.md  housing_pipeline.py
examples/custom_stages/: README.md  custom_pipeline.py
examples/digits_recognition/: README.md  digits_pipeline.py
examples/inference_latency/: README.md  latency_benchmark.py  profiler.py  requirements.txt
examples/iris_classification/: README.md  iris_config.yaml  iris_pipeline.py
src/stagecoachml/: __init__.py  pipeline.py  stage.py
stagecoachml/: __init__.py  cli.py  pipeline.py  utils.py
tests/: __init__.py  conftest.py  test_base.py  test_classification.py  test_regression.py  test_utils.py
tests/integration/: test_end_to_end.py
tests/unit/: test_pipeline.py  test_stage.py
